turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:19: error: type mismatch;
 found   : Unit
 required: Int
		var i:Int = indice(colors, getCouleurSol())
                                  ^LangtonsAnt:21: error: type mismatch;
 found   : Int(0)
 required: java.awt.Color
			case 'R' => 	if (i==colors.length-1) {setCouleurSol(0)} else {setCouleurSol(i+1)}
                                                                               ^LangtonsAnt:21: error: type mismatch;
 found   : Int
 required: java.awt.Color
			case 'R' => 	if (i==colors.length-1) {setCouleurSol(0)} else {setCouleurSol(i+1)}
                                                                                                        ^LangtonsAnt:24: error: type mismatch;
 found   : Int(0)
 required: java.awt.Color
			case 'L' =>	if (i==colors.length-1) {setCouleurSol(0)} else {setCouleurSol(i+1)}
                                                                               ^LangtonsAnt:24: error: type mismatch;
 found   : Int
 required: java.awt.Color
			case 'L' =>	if (i==colors.length-1) {setCouleurSol(0)} else {setCouleurSol(i+1)}
                                                                                                        ^